--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "dependencies": {
     "archiver": "^0.14.4",
     "async": "^1.3.0",
+    "aws-sdk": "^2.1.38",
     "chalk": "^1.1.0",
     "config": "^1.14.0",
     "dotenv": "^1.2.0",
     "humanize": "0.0.9",
     "lodash": "^3.10.0",
+    "s3-upload-stream": "^1.0.7",
     "shelljs": "^0.5.1",
     "terminal-menu": "^2.1.1"
   }
