--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
     "shelljs": "^0.5.1",
     "terminal-menu": "^2.1.1"
   },
-  "bin" : "./cli.js"
+  "bin": {
+    "gideon": "./bin/cli"
+  }
 }
