--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "gideon",
   "version": "1.0.0-alpha",
   "description": "A command line utility to archive a directory and upload it to S3",
-  "main": "cli.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/StudioLE/Gideon"
-  },
   "keywords": [
     "backup",
     "directory",
@@ -21,12 +13,20 @@
     "command",
     "line"
   ],
-  "author": "Laurence Elsdon",
-  "license": "MIT",
+  "author": {
+    "name": "Laurence Elsdon",
+    "email": "hi@studiole.uk",
+    "url": "https://studiole.uk"
+  },
+  "homepage": "https://github.com/StudioLE/Gideon",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/StudioLE/Gideon"
+  },
   "bugs": {
     "url": "https://github.com/StudioLE/Gideon/issues"
   },
-  "homepage": "https://github.com/StudioLE/Gideon",
+  "license": "MIT",
   "dependencies": {
     "archiver": "^0.14.4",
     "async": "^1.3.0",
@@ -37,8 +37,12 @@
     "humanize": "0.0.9",
     "lodash": "^3.10.0",
     "s3-upload-stream": "^1.0.7",
-    "shelljs": "^0.5.1",
     "terminal-menu": "^2.1.1"
+  },
+  "main": "lib/cli.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node lib/cli.js"
   },
   "bin": {
     "gideon": "./bin/cli"
